# LevelCalculator

./: .replit  Makefile  levelCalculator.py  pyproject.toml  pytest.ini  setup.cfg
level_calculator/: README.md  __main__.py  core.py  helpers.py
levelcalculator/: __init__.py  __main__.py  cli.py  levelCalculator.py
src/level_calculator/: cli.py  level_calculator.py
tests/: conftest.py  context.py  testCli.py  testLevelCalculator.py  test_LevelCalculator.py  test_app.py  test_cli.py
