[tool.poetry]
name = "levelcalculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
pytest = "^6.2.5"
typer = "^0.7.0"
rich = "^13.3.1"

[build.system]
requires = ["poetry-core>=1.0.0"]
build.backend = "poetry.core.masonry.api"

[project]
name = "levelcalculator"
